--- a/Readit/packages.config
+++ b/Readit/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Faker" version="1.2" targetFramework="net452" />
   <package id="Humanizer.Core" version="2.0.1" targetFramework="net452" />
   <package id="Humanizer.Core.af" version="2.0.1" targetFramework="net452" />
   <package id="Humanizer.Core.ar" version="2.0.1" targetFramework="net452" />
@@ -54,6 +55,7 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="NBuilder" version="3.0.1.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Collections" version="4.0.0" targetFramework="net452" />
